# songbot-auto

./: .env.example  .gitignore  Cargo.toml  README.md  application.yml  build.rs  download_lavalink.py  main.py  package-lock.json  requiriments.txt
src/: bot.rs  lavalink.rs  main.rs  utils.rs
