[package]
name = "autobot"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
regex = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"
fs_extra = "1.2"
futures-util = "0.3"

[build-dependencies] 
winres = "0.1"